fixed 1-70 lines in Store texts

--- a/core/i18n/resource/i18n/bg-BG.csv
+++ b/core/i18n/resource/i18n/bg-BG.csv
@@ -1,73 +1,74 @@
-" is out of stock!"," не е наличен!"
-"404 Page Not Found","404 Страница не е намерена"
-"Account data has successfully been updated","Данните от акаунта успешно бяха актуализирани"
-"Add review","Добавете рецензия"
+" is out of stock!"," не е налично!"
+"404 Page Not Found","404 Страницата не е намерена"
+"Account data has successfully been updated","Данните на профила бяха обновени успешно"
+"Add review","Добавете отзив"
 "Adding a review ...","Добавяне на отзив ..."
-"Address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled.","Адресът, предоставен в касата, съдържа невалидни данни. Моля, проверете дали всички задължителни полета са попълнени и също така се свържете с нас на {имейл}, за да разрешите този проблем за в бъдеще. Поръчката ви е анулирана."
-"Allow notification about the order","Разрешаване на известие за поръчката"
-"Are you sure you would like to remove this item from the shopping cart?","Сигурни ли сте, че искате да премахнете този продукт от пазарската количка?"
-"Checkout","Разгледайте"
-"Columns","колони"
+"The address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled.","Адресът, предоставен при плащане, съдържа невалидни данни. Моля, проверете дали всички задължителни полета са попълнени и също така се свържете с нас на {имейл}, за да разрешите този проблем за вбъдеще. Поръчката ви е анулирана."
+"Enable order notification","Активиране на известия за поръчката"
+"Are you sure you would like to remove this item from the shopping cart?","Сигурни ли сте, че искате да премахнете този продукт от количката?"
+"Checkout","Плащане"
+"Columns","Колони"
 "Language","Език"
 "Compare Products","Сравнете продукти"
+"Compare products","Сравнете продукти"
 "Confirm your order","Потвърдете поръчката си"
-"Error refreshing user token. User is not authorized to access the resource","Грешка при опресняване на потребителския маркер. Потребителят няма право да получава достъп до ресурса"
+"Error refreshing user token. User is not authorized to access the resource","Грешка при обновяване на потребителския токен. Потребителят няма право на достъп до ресурса"
 "Error with response - bad content-type!","Грешка с отговор - лош тип съдържание!"
 "Error: Error while adding products","Грешка: Грешка при добавяне на продукти"
-"Extension developers would like to thank you for placing an order!","Разработчиците за разширение искат да Ви благодарят за направената поръчка!"
 "Field is required","Задължително поле"
 "Field is required.","Задължително поле."
-"Grand total","общо"
+"Grand total","Общо"
 "Home Page","Начална страница"
 "In stock!","В наличност!"
-"Internal Application error while refreshing the tokens. Please clear the storage and refresh page.","Вътрешна грешка в приложението при опресняване на маркерите. Моля, изчистете страницата за съхранение и опресняване."
+"Internal Application error while refreshing the tokens. Please clear the storage and refresh page.","Вътрешна грешка в приложението при обновяване на токените. Моля, изчистете хранилището и презаредете страницата."
 "Internal validation error. Please check if all required fields are filled in. Please contact us on {email}","Вътрешна грешка при валидиране. Моля, проверете дали всички задължителни полета са попълнени. Моля, свържете се с нас на {email}"
 "Must be greater than 0","Трябва да е по-голямо от 0"
-"My Account","Моята сметка"
-"Newsletter preferences have successfully been updated","Предпочитанията за бюлетин успешно бяха актуализирани"
-"No available product variants","Няма налични варианти на продукти"
-"No products synchronized for this category. Please come back while online!","Няма продукти, синхронизирани за тази категория. Моля, върнете се, докато сте онлайн!"
+"My Account","Моят профил"
+"Newsletter preferences have successfully been updated","Предпочитанията за бюлетин бяха обновени успешно"
+"No available product variants","Няма налични варианти на продукта"
+"No products synced for this category. Please come back while online!","В тази категория не сe синхронизираха продукти. Моля, върнете се когато сте онлайн!"
 "No such configuration for the product. Please do choose another combination of attributes.","Няма такава конфигурация за продукта. Моля, изберете друга комбинация от атрибути."
 "OK","Добре"
 "Only {maxQuantity} products of this type are available!","Предлагат се само {maxQuantity} продукти от този тип!"
-"Or if you will stay on ""Order confirmation"" page, the order will be placed automatically without confirmation, once the internet connection will be back.","Или ако останете на страницата „Потвърждение на поръчката“, поръчката ще бъде направена автоматично без потвърждение, след като връзката с интернет се върне."
+"Or if you will stay on the "Order Confirmation" page, the order will be placed automatically, once the internet connection is back.","Или ако останете на страницата „Потвърждение на поръчката“, поръчката ще бъде направена автоматично без потвърждение, след като връзката с интернет се върне."
 "Out of stock!","Не е налично!"
-"Out of the stock!","Няма на склад!"
+"Out of the stock!","Не е налично!"
 "Payment Information","Информация за плащане"
 "Please configure product bundle options and fix the validation errors","Моля, конфигурирайте опциите за пакет продукти и поправете грешките при валидиране"
-"Please confirm order you placed when you was offline","Моля, потвърдете поръчката, която сте направили, когато сте били офлайн"
+"Please configure custom product options and fix the validation errors","Моля, конфигурирайте персонализираните опции на продукта и коригирайте грешките при валидиране"
+"Please confirm the order you placed when you were offline","Моля, потвърдете поръчката, която сте направили, когато сте били офлайн"
 "Please fix the validation errors","Моля, поправете грешките при валидиране"
 "Please select the field which You like to sort by","Моля, изберете полето, по което искате да сортирате"
-"Please wait ...","Моля Изчакай ..."
-"Proceed to checkout","Пристъпете към касата"
-"Processing order...","Поръчка за обработка ..."
-"Product has been added to the cart!","Продуктът е добавен в количката!"
-"Product price is unknown, product cannot be added to the cart!","Цената на продукта е неизвестна, продуктът не може да бъде добавен в количката!"
-"Product quantity has been updated!","Количеството на продукта е актуализирано!"
-"Product {productName} has been added to the compare!","Продукт {productName} е добавен към сравнението!"
-"Product {productName} has been added to wishlist!","Продукт {productName} е добавен към списъка с желания!"
-"Product {productName} has been removed from compare!","Продуктът {productName} е премахнат от сравнение!"
-"Product {productName} has been removed from wishlist!","Продуктът {productName} е премахнат от списъка с желания!"
+"Please wait ...","Моля, Изчакайте ..."
+"Proceed to checkout","Продължете към плащане"
+"Processing order...","Поръчката се обработва ..."
+"The product has been added to Cart!","Продуктът е добавен в кошницата!"
+"The product price is unknown and cannot be added to Cart!","Цената на продукта е неизвестна и той не може бъде добавен в кошницата!"
+"The product quantity has been updated!","Количеството на продукта е обновено!"
+"Product {productName} has been added to Compare!","Продуктът {productName} е добавен за сравнение!"
+"Product {productName} has been added to Wishlist!","Продуктът {productName} е добавен към списъка с желания!"
+"Product {productName} has been removed from Compare!","Продуктът {productName} е премахнат от сравнението!"
+"Product {productName} has been removed from Wishlist!","Продуктът {productName} е премахнат от списъка с желания!"
 "Quantity (offline mode)","Количество (офлайн режим)"
 "Quantity ({qty} available)","Количество ({qty} налични)"
 "Quantity must be above 0","Количеството трябва да е над 0"
 "Quantity must be below {quantity}","Количеството трябва да бъде под {количество}"
 "Quantity must be positive integer","Количеството трябва да е положително цяло число"
 "Registering the account ...","Регистриране на акаунта ..."
-"Reset password feature does not work while offline!","Функцията за нулиране на паролата не работи, докато сте офлайн!"
-"Review","преглед"
+"The reset password feature does not work while offline!","Функцията за нулиране на паролата не работи, докато сте офлайн!"
+"Review","Отзив"
 "Reviews","Отзиви"
 "Select 0","Изберете 0"
 "Select 1","Изберете 1"
-"Shopping cart is empty. Please add some products before entering Checkout","Количката е празна. Моля, добавете някои продукти, преди да влезете в Checkout"
-"Some of the ordered products are not available!","Някои от поръчаните продукти не се предлагат!"
-"Stock check in progress, please wait while available stock quantities are checked","Проверка на запасите в ход, моля изчакайте, докато се проверят наличните количества"
-"Subtotal incl. tax","Субтотален вкл. данък"
-"Summary","резюме"
-"The product is out of stock and cannot be added to the cart!","Продуктът е на склад и не може да бъде добавен в количката!"
-"The product, category or CMS page is not available in Offline mode. Redirecting to Home.","Продуктът, категорията или CMS страницата не са достъпни в офлайн режим. Пренасочване към дома."
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","Системата не е сигурна за количеството на запасите (променливо). Продуктът е добавен в количката за предварителна резервация."
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not avaiable because we cannot check it right now.","Няма интернет връзка. Все още можете да направите поръчката си. Ще ви уведомим, ако някой от поръчаните продукти не е наличен, защото не можем да го проверим в момента."
+"Shopping cart is empty. Please add some products before entering Checkout","Количката е празна. Моля, добавете продукти, преди да влезете в Плащане"
+"Some of the ordered products are not available!","Някои от поръчаните продукти не са налични!"
+"Please wait while we check for available stock quantities","Моля, изчакайте, докато проверим наличните количества"
+"Subtotal incl. tax","Междинна сума вкл. данък"
+"Summary","Обобщение"
+"The product is out of stock and cannot be added to Cart!","Продуктът е изчерпан и не може да бъде добавен в кошницата!"
+"The product, category, or CMS page is not available in Offline mode. Redirecting to Home.","Продуктът, категорията или CMS страницата не са достъпни в офлайн режим. Пренасочване към Начало."
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","Системата не е сигурна за наличното количество (променливо). Продуктът е добавен в кошницата за предварителна резервация."
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of the ordered products are out of stock.","Съжаляваме, нямаме връзка с интернет. Все още можете да направите поръчката си. В момента не можем да проверим дали някой от поръчаните продукти е изчерпан. Ще ви уведомим при първа възможност!"
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Тази функция все още не е внедрена! Моля, разгледайте https://github.com/DivanteLtd/vue-storefront/isissue за нашата пътна карта!"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Въведете това, което търсите ..."
