--- a/core/i18n/resource/i18n/cs-CZ.csv
+++ b/core/i18n/resource/i18n/cs-CZ.csv
@@ -3,7 +3,7 @@
 "Account data has successfully been updated","Údaje účtu byly úspěšně aktualizovány"
 "Add review","Přidat recenzi"
 "Adding a review ...","Adding a review ..."
-"Allow notification about the order","Povolit oznámení o objednávce"
+"Enable order notification","Povolit oznámení o objednávce"
 "Are you sure you would like to remove this item from the shopping cart?","Opravdu chcete tuto položku odebrat z nákupního košíku?"
 "Checkout","Koupit"
 "Compare Products","Porovnání produktů"
@@ -23,37 +23,37 @@
 "My Account","Můj účet"
 "Newsletter preferences have successfully been updated","Preference zasílání novinek byly úspěšně aktualizovány"
 "No available product variants","Žádné dostupné varianty produktu"
-"No products synchronized for this category. Please come back while online!","V této kategorii nemáte žádné synchronizované produkty. Zkuste prosím znovu až budete online!"
+"No products synced for this category. Please come back while online!","V této kategorii nemáte žádné synchronizované produkty. Zkuste prosím znovu až budete online!"
 "No such configuration for the product. Please do choose another combination of attributes.","Neexistuje žádná taková konfigurace pro daný výrobek. Vyberte prosím jinou kombinaci vlastností."
 "OK","OK"
 "Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
 "Out of stock!","Vyprodáno!"
 "Out of the stock!","Není skladem!"
 "Payment Information","Informace o platbě"
-"Please configure product custom options and fix the validation errors","Přizpůsobte vlastní navolené možnosti produktu a opravte chyby ověření"
-"Please confirm order you placed when you was offline","Potvrďte objednávku, kterou jste zadali, když jste byli offline"
+"Please configure custom product options and fix the validation errors","Přizpůsobte vlastní navolené možnosti produktu a opravte chyby ověření"
+"Please confirm the order you placed when you were offline","Potvrďte objednávku, kterou jste zadali, když jste byli offline"
 "Please fix the validation errors","Opravte chyby ověření"
 "Please select the field which You like to sort by","Vyberte pole, dle kterého chcete seřadit"
 "Proceed to checkout","Přejděte k nákupu"
-"Product has been added to the cart!","Produkt byl přidán do košíku!"
-"Product price is unknown, product cannot be added to the cart!","Cena produktu není známa, produkt nelze přidat do košíku!"
-"Product quantity has been updated!","Množství produktu bylo aktualizováno!"
-"Product {productName} has been added to the compare!","Produkt {productName} byl přidán k porovnání!"
-"Product {productName} has been added to wishlist!","Produkt {productName} byl přidán do seznamu přání!"
-"Product {productName} has been removed from compare!","Produkt {productName} byl odstraněn z porovnávání!"
-"Product {productName} has been removed from wishlist!","Produkt {productName} byl odstraněn ze seznamu přání!"
+"The product has been added to Cart!","Produkt byl přidán do košíku!"
+"The product price is unknown and cannot be added to Cart!","Cena produktu není známa, produkt nelze přidat do košíku!"
+"The product quantity has been updated!","Množství produktu bylo aktualizováno!"
+"Product {productName} has been added to Compare!","Produkt {productName} byl přidán k porovnání!"
+"Product {productName} has been added to Wishlist!","Produkt {productName} byl přidán do seznamu přání!"
+"Product {productName} has been removed from Compare!","Produkt {productName} byl odstraněn z porovnávání!"
+"Product {productName} has been removed from Wishlist!","Produkt {productName} byl odstraněn ze seznamu přání!"
 "Registering the account ...","Registrace účtu ..."
-"Reset password feature does not work while offline!","Funkce obnovení hesla nefunguje offline!"
+"The reset password feature does not work while offline!","Funkce obnovení hesla nefunguje offline!"
 "Review","Recenze"
 "Reviews","Recenze"
 "Shopping cart is empty. Please add some products before entering Checkout","Nákupní košík je prázdný. Prosím přidejte nějaké produkty než přistoupíte k nákupu"
 "Some of the ordered products are not available!","Některé z objednaných produktů nejsou k dispozici!"
-"Stock check in progress, please wait while available stock quantities are checked","Kontrola skladových zásob probíhá, prosím, počkejte, až se zkontroluje množství dostupných zásob"
+"Please wait while we check for available stock quantities","Kontrola skladových zásob probíhá, prosím, počkejte, až se zkontroluje množství dostupných zásob"
 "Subtotal incl. tax","Mezisoučet vč. daně"
 "Summary","Shrnutí",
-"The product is out of stock and cannot be added to the cart!","Produkt není na skladě a nelze ho přidat do košíku!"
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","Systém si není jistý množstvím zásob (volatilní). Produkt byl přidán do košíku pro předběžnou rezervaci."
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not available because we cannot check it right now.","Připojení k internetu není k dispozici. Stále si však můžete zboží objednat. Budeme vás informovat v případě, že některý z objednaných produktů není k dispozici, protože to v současnosti nelze zkontrolovat."
+"The product is out of stock and cannot be added to Cart!","Produkt není na skladě a nelze ho přidat do košíku!"
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","Systém si není jistý množstvím zásob (volatilní). Produkt byl přidán do košíku pro předběžnou rezervaci."
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Připojení k internetu není k dispozici. Stále si však můžete zboží objednat. Budeme vás informovat v případě, že některý z objednaných produktů není k dispozici, protože to v současnosti nelze zkontrolovat."
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Tato funkce zatím nebyla zavedena! Prosíme, podívejte se na https://github.com/DivanteLtd/vue-storefront/issues pro podrobný návod!"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Zadejte, co hledáte..."
