--- a/core/i18n/resource/i18n/ja-JP.csv
+++ b/core/i18n/resource/i18n/ja-JP.csv
@@ -7,7 +7,7 @@
 "Add to compare","比べるに追加"
 "Add to favorite","お気に入りに追加"
 "Adding a review ...","Adding a review ..."
-"Allow notification about the order","注文に関する通知を送る"
+"Enable order notification","注文に関する通知を送る"
 "Are you sure you would like to remove this item from the shopping cart?","この商品をショッピングカートから削除してもいいですか？"
 "Author","作者"
 "Back to login","ログインに戻る"
@@ -86,9 +86,9 @@
 "Personal Details","ユーザーの詳細"
 "Place the order","注文する"
 "Please check if all data are correct","全てのデータが正しいかチェックしてください"
-"Please confirm order you placed when you was offline","オフライン中に注文した商品を確認してください"
+"Please confirm the order you placed when you were offline","オフライン中に注文した商品を確認してください"
 "Please select the field which You like to sort by","ソートしたい項目を選んでください"
-"Product quantity has been updated!","製品の数量が更新されました！"
+"The product quantity has been updated!","製品の数量が更新されました！"
 "Products","商品"
 "Purchase","購入"
 "Register an account","アカウントを登録"
@@ -96,7 +96,7 @@
 "Remember me","ログインを覚える"
 "Remove from compare","比べるから外す"
 "Repeat new password *","新しいパスワード(もう一度) *"
-"Reset password feature does not work while offline!","オフラインの間ではパスワードの再設定はできません！"
+"The reset password feature does not work while offline!","オフラインの間ではパスワードの再設定はできません！"
 "Returns","返品"
 "Review order","注文のレビュー"
 "Review","レビュー"
@@ -117,7 +117,7 @@
 "Some of the ordered products are not available!","注文された商品に在庫切れがあります！"
 "Sort By","ソート"
 "Status","ステータス"
-"Stock check in progress, please wait while available stock quantities are checked","在庫チェックをしています。もう少々おまちください。"
+"Please wait while we check for available stock quantities","在庫チェックをしています。もう少々おまちください。"
 "Street name","通りの名前"
 "Subscribe to the newsletter and receive a coupon for 10% off","ニュースレターに登録をして、10%OFFクーポンを手に入れましょう！"
 "Summary","詳細"
@@ -127,9 +127,9 @@
 "Tax identification number must have at least 3 letters.","税金登録番号は3桁以上である必要があります。"
 "Tax","税金"
 "The new account will be created with the purchase. You will receive details on e-mail.","この注文後新しいアカウントが作られます。メールで詳細が送られます。"
-"The product is out of stock and cannot be added to the cart!","この商品は在庫がなく、カートに追加することができません！"
+"The product is out of stock and cannot be added to Cart!","この商品は在庫がなく、カートに追加することができません！"
 "The server order id has been set to ","サーバー注文IDが以下に設定されました "
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not available because we cannot check it right now.","現在インターネットへ接続されていません。注文をすることはできますが、在庫がない場合はインターネットに接続後お知らせを送ります。"
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","現在インターネットへ接続されていません。注文をすることはできますが、在庫がない場合はインターネットに接続後お知らせを送ります。"
 "Thumbnail","Thumbnail"
 "To finish the order just come back to our store while online. Your order will be sent to the server as soon as you come back here while online and then confirmed regarding the stock quantities of selected items","注文を終了するにはオンラインになったて再度確認する必要があります。オンラインになったら注文がサーバーに送られて在庫チェックが行われます。"
 "Type your opinion","意見を入力"
