--- a/core/i18n/resource/i18n/pt-PT.csv
+++ b/core/i18n/resource/i18n/pt-PT.csv
@@ -14,29 +14,29 @@
 "Internal validation error. Please check if all required fields are filled in. Please contact us on support@procc.co","Erro interno de validação. Por favor verifique se todos os campos obrigatórios estão preenchidos. Por favor contate-nos em support@procc.co"
 "My Account","A Minha Conta"
 "Newsletter preferences have successfully been updated","As suas preferências para a Newsletter foram atualizadas."
-"No products synchronized for this category. Please come back while online!","Nenhum produto sincronizado para esta categoria. Por favor volte qundo estiver online!"
+"No products synced for this category. Please come back while online!","Nenhum produto sincronizado para esta categoria. Por favor volte qundo estiver online!"
 "No such configuration for the product. Please do choose another combination of attributes.","Esta configuração não é possível para este produto. Por favor selecione outra configuração de opções."
 "OK","OK"
 "Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
 "Out of stock!","Ruptura de stock!"
 "Please fix the validation errors","Por favor corrija os erros de validação"
 "Proceed to checkout","Ir para Finalizar Compra"
-"Product has been added to the cart!","O produto foi adicionado ao Cesto de Compras!"
-"Product price is unknown, product cannot be added to the cart!","O preço do produto é desconhecido, o produto não pode ser adicionado ao Cesto de Compras!"
-"Product quantity has been updated!","A quantidade do produto foi atualizada!"
-"Product {productName} has been added to the compare!","Produto {productName} foi adicionado a Comparar Produtos!"
-"Product {productName} has been added to wishlist!","Produto {productName} foi adicionado à Lista de Desejos!"
-"Product {productName} has been removed from compare!","Produto {productName} foi removido de Comparar Produtos!"
-"Product {productName} has been removed from wishlist!","Produto {productName} foi removido da Lista de Desejos!"
+"The product has been added to Cart!","O produto foi adicionado ao Cesto de Compras!"
+"The product price is unknown and cannot be added to Cart!","O preço do produto é desconhecido, o produto não pode ser adicionado ao Cesto de Compras!"
+"The product quantity has been updated!","A quantidade do produto foi atualizada!"
+"Product {productName} has been added to Compare!","Produto {productName} foi adicionado a Comparar Produtos!"
+"Product {productName} has been added to Wishlist!","Produto {productName} foi adicionado à Lista de Desejos!"
+"Product {productName} has been removed from Compare!","Produto {productName} foi removido de Comparar Produtos!"
+"Product {productName} has been removed from Wishlist!","Produto {productName} foi removido da Lista de Desejos!"
 "Registering the account ...","A registar a conta ..."
-"Reset password feature does not work while offline!","A funcionalidade de Recuperação de Senha não funciona sem ligação à internet!"
+"The reset password feature does not work while offline!","A funcionalidade de Recuperação de Senha não funciona sem ligação à internet!"
 "Shopping cart is empty. Please add some products before entering Checkout","O Cesto de Compras está vazio. Por favor adicione alguns produtos antes de Finalizar Compra"
 "Some of the ordered products are not available!","Alguns dos produtos solicitados não estão disponíveis!"
-"Stock check in progress, please wait while available stock quantities are checked","Estamos a verificar o stock, por favor aguarde até que verifiquemos se a quantidade solicitada está disponível."
+"Please wait while we check for available stock quantities","Estamos a verificar o stock, por favor aguarde até que verifiquemos se a quantidade solicitada está disponível."
 "Subtotal incl. tax","Subtotal c/ imposto"
-"The product is out of stock and cannot be added to the cart!","O produto não se encontra em stock e não pode ser adicionado ao Cesto de Compras!"
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","O sistema não tem certeza sobre a quantidade em stock (volátil). O produto foi adicionado ao Cesto de Compras em pré-reserva."
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not available because we cannot check it right now.","Sem ligação à Internet. Mas pode finalizar o seu pedido. Assim que possível iremos notifica-lo caso algum dos produtos solicitados não estiverem disponíveis."
+"The product is out of stock and cannot be added to Cart!","O produto não se encontra em stock e não pode ser adicionado ao Cesto de Compras!"
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","O sistema não tem certeza sobre a quantidade em stock (volátil). O produto foi adicionado ao Cesto de Compras em pré-reserva."
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Sem ligação à Internet. Mas pode finalizar o seu pedido. Assim que possível iremos notifica-lo caso algum dos produtos solicitados não estiverem disponíveis."
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Esta funcionalidade ainda não foi implementada! Por favor consulte o nosso Rodmap em https://github.com/DivanteLtd/vue-storefront/issues!"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Escreva o que está procurando..."
