--- a/core/i18n/resource/i18n/ru-RU.csv
+++ b/core/i18n/resource/i18n/ru-RU.csv
@@ -13,27 +13,27 @@
 "Internal validation error. Please check if all required fields are filled in. Please contact us on {email}","Внутренняя валидационная ошибка. Пожалуйста проверьте заполненность всех обязательных полей. Пожалуйста свяжитесь с нами по {email}"
 "My Account","Личный кабинет"
 "Newsletter preferences have successfully been updated","Предпочтения по новостям успешно обновлены"
-"No products synchronized for this category. Please come back while online!","По данной категории товары не синхронизированы. Пожалуйста вернитесь когда будете онлайн!"
+"No products synced for this category. Please come back while online!","По данной категории товары не синхронизированы. Пожалуйста вернитесь когда будете онлайн!"
 "No such configuration for the product. Please do choose another combination of attributes.","У товара отсутствует данная конфигурация. Пожалуйста выберите другие значения атрибутов."
 "Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
 "Out of stock!","Нет в наличии!"
 "Please fix the validation errors","Пожалуйста исправьте валидационные ошибки"
-"Product has been added to the cart!","Товар добавлен в корзину!"
-"Product price is unknown, product cannot be added to the cart!","Цена товара неизвестна, товар нельзя добавить в корзину!"
-"Product quantity has been updated!","Количество товара обновлено!"
-"Product {productName} has been added to the compare!","Товар {productName} добавлен к странице сравнения!"
-"Product {productName} has been added to wishlist!","Товар {productName} добавлен к списку пожеланий!"
-"Product {productName} has been removed from compare!","Товар {productName} удален из страницы сравнения!"
-"Product {productName} has been removed from wishlist!","Товар {productName} удален из списка пожеланий!"
+"The product has been added to Cart!","Товар добавлен в корзину!"
+"The product price is unknown and cannot be added to Cart!","Цена товара неизвестна, товар нельзя добавить в корзину!"
+"The product quantity has been updated!","Количество товара обновлено!"
+"Product {productName} has been added to Compare!","Товар {productName} добавлен к странице сравнения!"
+"Product {productName} has been added to Wishlist!","Товар {productName} добавлен к списку пожеланий!"
+"Product {productName} has been removed from Compare!","Товар {productName} удален из страницы сравнения!"
+"Product {productName} has been removed from Wishlist!","Товар {productName} удален из списка пожеланий!"
 "Registering the account ...","Создается учетная запись ..."
-"Reset password feature does not work while offline!","Возможность переустановки пароля не работает при отсутствующем соединении к интернету!"
+"The reset password feature does not work while offline!","Возможность переустановки пароля не работает при отсутствующем соединении к интернету!"
 "Shopping cart is empty. Please add some products before entering Checkout","Корзина пустая. Пожалуйста добавьте товары перед оформлением заказа"
 "Some of the ordered products are not available!","Некоторые из заказанных товаров не доступны!"
-"Stock check in progress, please wait while available stock quantities are checked","Производится проверка товаров на наличие, пожалуйста дождитесь завершения процесса проверки доступного количества"
+"Please wait while we check for available stock quantities","Производится проверка товаров на наличие, пожалуйста дождитесь завершения процесса проверки доступного количества"
 "Subtotal incl. tax","Подитог вкл. налог"
-"The product is out of stock and cannot be added to the cart!","Товара нет в наличии и его нельзя добавить в корзину"
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","Система не может удостовериться в наличии необходимого количества (изменчиво). Товар добавлен в корзину для предварительного бронирования."
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not available because we cannot check it right now.","Отсутствует соединение к интернету. Однако вы можете оформить заказ. Мы уведомим Вас об отсутствии какого-либо из заказанных товаров позднее, так как не можем проверить это в данный момент."
+"The product is out of stock and cannot be added to Cart!","Товара нет в наличии и его нельзя добавить в корзину"
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","Система не может удостовериться в наличии необходимого количества (изменчиво). Товар добавлен в корзину для предварительного бронирования."
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Отсутствует соединение к интернету. Однако вы можете оформить заказ. Мы уведомим Вас об отсутствии какого-либо из заказанных товаров позднее, так как не можем проверить это в данный момент."
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Данная возможность пока не реализована! Пожалуйста ознакомьтесь с нашей дорожной картой тут: https://github.com/DivanteLtd/vue-storefront/issues"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Введите то что Вы ищите..."
