--- a/src/themes/default-procc/resource/i18n/de-DE.csv
+++ b/src/themes/default-procc/resource/i18n/de-DE.csv
@@ -5,7 +5,7 @@
 "Add to cart","In den Warenkorb"
 "Add to compare","Zum Vergleich hinzufügen"
 "Add to favorite","Zu Favoriten hinzufügen"
-"Allow notification about the order","Erlauben Sie Benachrichtigungen zu Ihrer Bestellung"
+"Enable order notification","Erlauben Sie Benachrichtigungen zu Ihrer Bestellung"
 "Author","Autor"
 "Authorization in progress ...","Autorisierung läuft ..."
 "Back to login","Zurück zur Anmeldung"
@@ -146,7 +146,7 @@
 "Place the order","Bestellung abschicken"
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Bitte ändern Sie Ihre Suchkriterien und versuchen Sie es erneut. Wenn Sie weiterhin nichts Relevantes finden können, besuchen Sie unsere Homepage und probieren Sie einige unserer Bestseller!"
 "Please check if all data are correct","Bitte überprüfen Sie, ob alle Daten korrekt sind"
-"Please confirm order you placed when you was offline","Bitte bestätigen Sie Ihre Bestellung, die Sie im Offline-Modus abgegeben haben"
+"Please confirm the order you placed when you were offline","Bitte bestätigen Sie Ihre Bestellung, die Sie im Offline-Modus abgegeben haben"
 "Please provide valid e-mail address.","Bitte eine gültige E-Mail-Adresse eingeben."
 "Price {variant}","Preis {variant}"
 "Price","Preis"
