--- a/src/themes/default-procc/resource/i18n/it-IT.csv
+++ b/src/themes/default-procc/resource/i18n/it-IT.csv
@@ -6,7 +6,7 @@
 "Add to cart","Aggiungi al carrello"
 "Add to compare","Confronta"
 "Add to favorite","Aggiungi ai preferiti"
-"Allow notification about the order","Abilita le notifiche per quest'ordine"
+"Enable order notification","Abilita le notifiche per quest'ordine"
 "Are you sure you would like to remove all the items from the shopping cart?","Confermi la rimozione di tutti i prodotti dal carrello?"
 "Are you sure you would like to remove all the items from the wishlist?","Confermi la rimozione di tutti i prodotti dalla lista dei desideri?"
 "Author","Autore"
@@ -155,7 +155,7 @@
 "Place the order","Concludi l'ordine"
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Per favore cambia i tuoi parametri di ricerca e riprova. Se ancora non trovi nulla di rilevante, torna in home page e prova qualcuno dei nostri prodotti più venduti!"
 "Please check if all data are correct","Controlla che tutte le informazioni siano corrette"
-"Please confirm order you placed when you was offline","Conferma l'ordine che hai creato quando eri offline"
+"Please confirm the order you placed when you were offline","Conferma l'ordine che hai creato quando eri offline"
 "Please provide valid e-mail address.","Inserisci un indirizzo email valido"
 "Price {variant}","Prezzo {variant}"
 "Price","Prezzo"
