--- a/src/themes/default-procc/resource/i18n/pl-PL.csv
+++ b/src/themes/default-procc/resource/i18n/pl-PL.csv
@@ -128,7 +128,7 @@
 "Place the order","Złóż zamówienie"
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Zmień kryteria wyszukiwania i spróbuj ponownie. Jeśli nadal nie znajdziesz niczego istotnego, odwiedź stronę główną i wypróbuj niektóre z naszych bestsellerów!"
 "Please check if all data are correct","Sprawdź czy wszystkie dane są poprawne"
-"Please confirm order you placed when you was offline","Potwierdź zamówienie, które złożyłeś będąc w trybie offline"
+"Please confirm the order you placed when you were offline","Potwierdź zamówienie, które złożyłeś będąc w trybie offline"
 "Please provide valid e-mail address.","Podaj prawidłowy adres e-mail."
 "Price {variant}","Cena {variant}"
 "Price","Cena"
