--- a/src/themes/default/resource/i18n/nl-NL.csv
+++ b/src/themes/default/resource/i18n/nl-NL.csv
@@ -13,7 +13,7 @@ Add review,Review toevoegen
 Add to cart,In winkelwagen
 Add to compare,Voeg toe aan de vergelijking
 Add to favorite,Voeg toe aan favorieten
-Allow notification about the order,Sta notificaties over uw order toe
+Enable order notification,Sta notificaties over uw order toe
 Apply,Toepassen
 Author,Auteur
 Authorization in progress ...,Bezig met autorizeren...
@@ -146,7 +146,7 @@ Phone Number,Telefoonnummer
 Phone number may be needed by carrier,Telefoonnummer kan nodig zijn voor vervoerder
 Place the order,Plaats bestelling
 Please check if all data are correct,Controleer of alle gegevens correct zijn
-Please confirm order you placed when you was offline,Bevestig uw offline geplaatste order
+Please confirm the order you placed when you were offline,Bevestig uw offline geplaatste order
 Please provide valid e-mail address.,Geef een geldig e-mailadres op.
 Price ,Prijs
 Price,Prijs
