--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -3,8 +3,8 @@
 "Account data has successfully been updated","Account data has successfully been updated"
 "Add review","Add review"
 "Adding a review ...","Adding a review ..."
-"Address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled.","Address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled."
-"Allow notification about the order","Allow notification about the order"
+"The address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled.","The address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled."
+"Enable order notification","Enable order notification"
 "Are you sure you would like to remove this item from the shopping cart?","Are you sure you would like to remove this item from the shopping cart?"
 "Checkout","Checkout"
 "Columns","Columns"
@@ -15,7 +15,6 @@
 "Error refreshing user token. User is not authorized to access the resource","Error refreshing user token. User is not authorized to access the resource"
 "Error with response - bad content-type!","Error with response - bad content-type!"
 "Error: Error while adding products","Error: Error while adding products"
-"Extension developers would like to thank you for placing an order!","Extension developers would like to thank you for placing an order!"
 "Field is required","Field is required"
 "Field is required.","Field is required."
 "Grand total","Grand total"
@@ -27,49 +26,49 @@
 "My Account","My Account"
 "Newsletter preferences have successfully been updated","Newsletter preferences have successfully been updated"
 "No available product variants","No available product variants"
-"No products synchronized for this category. Please come back while online!","No products synchronized for this category. Please come back while online!"
+"No products synced for this category. Please come back while online!","No products synced for this category. Please come back while online!"
 "No such configuration for the product. Please do choose another combination of attributes.","No such configuration for the product. Please do choose another combination of attributes."
 "OK","OK"
 "Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
-"Or if you will stay on "Order confirmation" page, the order will be placed automatically without confirmation, once the internet connection will be back.","Or if you will stay on "Order confirmation" page, the order will be placed automatically without confirmation, once the internet connection will be back."
+"Or if you will stay on the "Order Confirmation" page, the order will be placed automatically, once the internet connection is back.","Or if you will stay on the "Order Confirmation" page, the order will be placed automatically, once the internet connection is back."
 "Out of stock!","Out of stock!"
 "Out of the stock!","Out of the stock!"
 "Payment Information","Payment Information"
 "Please configure product bundle options and fix the validation errors","Please configure product bundle options and fix the validation errors"
-"Please configure product custom options and fix the validation errors","Please configure product custom options and fix the validation errors"
-"Please confirm order you placed when you was offline","Please confirm order you placed when you was offline"
+"Please configure custom product options and fix the validation errors","Please configure custom product options and fix the validation errors"
+"Please confirm the order you placed when you were offline","Please confirm the order you placed when you were offline"
 "Please fix the validation errors","Please fix the validation errors"
 "Please select the field which You like to sort by","Please select the field which You like to sort by"
 "Please wait ...","Please wait ..."
 "Proceed to checkout","Proceed to checkout"
 "Processing order...","Processing order..."
-"Product has been added to the cart!","Product has been added to the cart!"
-"Product price is unknown, product cannot be added to the cart!","Product price is unknown, product cannot be added to the cart!"
-"Product quantity has been updated!","Product quantity has been updated!"
-"Product {productName} has been added to the compare!","Product {productName} has been added to the compare!"
-"Product {productName} has been added to wishlist!","Product {productName} has been added to wishlist!"
-"Product {productName} has been removed from compare!","Product {productName} has been removed from compare!"
-"Product {productName} has been removed from wishlist!","Product {productName} has been removed from wishlist!"
+"The product has been added to Cart!","The product has been added to Cart!"
+"The product price is unknown and cannot be added to Cart!","The product price is unknown and cannot be added to Cart!"
+"The product quantity has been updated!","The product quantity has been updated!"
+"Product {productName} has been added to Compare!","Product {productName} has been added to Compare!"
+"Product {productName} has been added to Wishlist!","Product {productName} has been added to Wishlist!"
+"Product {productName} has been removed from Compare!","Product {productName} has been removed from Compare!"
+"Product {productName} has been removed from Wishlist!","Product {productName} has been removed from Wishlist!"
 "Quantity available offline","Quantity (offline mode)"
 "Quantity available","Quantity ({qty} available)"
 "Quantity must be above 0","Quantity must be above 0"
 "Quantity must be below {quantity}","Quantity must be below {quantity}"
 "Quantity must be positive integer","Quantity must be positive integer"
 "Registering the account ...","Registering the account ..."
-"Reset password feature does not work while offline!","Reset password feature does not work while offline!"
+"The reset password feature does not work while offline!","The reset password feature does not work while offline!"
 "Review","Review"
 "Reviews","Reviews"
 "Select 0","Select 0"
 "Select 1","Select 1"
 "Shopping cart is empty. Please add some products before entering Checkout","Shopping cart is empty. Please add some products before entering Checkout"
 "Some of the ordered products are not available!","Some of the ordered products are not available!"
-"Stock check in progress, please wait while available stock quantities are checked","Stock check in progress, please wait while available stock quantities are checked"
+"Please wait while we check for available stock quantities","Please wait while we check for available stock quantities"
 "Subtotal incl. tax","Subtotal incl. tax"
 "Summary","Summary"
-"The product is out of stock and cannot be added to the cart!","The product is out of stock and cannot be added to the cart!"
-"The product, category or CMS page is not available in Offline mode. Redirecting to Home.","The product, category or CMS page is not available in Offline mode. Redirecting to Home."
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation."
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not available because we cannot check it right now.","There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not avaiable because we cannot check it right now."
+"The product is out of stock and cannot be added to Cart!","The product is out of stock and cannot be added to Cart!"
+"The product, category, or CMS page is not available in Offline mode. Redirecting to Home.","The product, category, or CMS page is not available in Offline mode. Redirecting to Home."
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation."
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not avaiable because we cannot check it right now."
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Type what you are looking for..."
@@ -95,8 +94,8 @@
 "Account data has successfully been updated","Account data has successfully been updated"
 "Add review","Add review"
 "Adding a review ...","Adding a review ..."
-"Address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled.","Address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled."
-"Allow notification about the order","Allow notification about the order"
+"The address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled.","The address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled."
+"Enable order notification","Enable order notification"
 "Are you sure you would like to remove this item from the shopping cart?","Are you sure you would like to remove this item from the shopping cart?"
 "Checkout","Checkout"
 "Columns","Columns"
@@ -107,60 +106,30 @@
 "Error with response - bad content-type!","Error with response - bad content-type!"
 "Error: Error while adding products","Error: Error while adding products"
 "Extension developers would like to thank you for placing an order!","Extension developers would like to thank you for placing an order!"
-"Field is required","Field is required"
-"Field is required.","Field is required."
-"Grand total","Grand total"
-"Home Page","Home Page"
-"In stock!","In stock!"
-"Internal Application error while refreshing the tokens. Please clear the storage and refresh page.","Internal Application error while refreshing the tokens. Please clear the storage and refresh page."
-"Internal validation error. Please check if all required fields are filled in. Please contact us on {email}","Internal validation error. Please check if all required fields are filled in. Please contact us on {email}"
-"Must be greater than 0","Must be greater than 0"
-"My Account","My Account"
-"Newsletter preferences have successfully been updated","Newsletter preferences have successfully been updated"
-"No available product variants","No available product variants"
-"No products synchronized for this category. Please come back while online!","No products synchronized for this category. Please come back while online!"
-"No such configuration for the product. Please do choose another combination of attributes.","No such configuration for the product. Please do choose another combination of attributes."
-"OK","OK"
-"Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
-"Or if you will stay on "Order confirmation" page, the order will be placed automatically without confirmation, once the internet connection will be back.","Or if you will stay on "Order confirmation" page, the order will be placed automatically without confirmation, once the internet connection will be back."
-"Out of stock!","Out of stock!"
-"Out of the stock!","Out of the stock!"
-"Payment Information","Payment Information"
-"Please configure product bundle options and fix the validation errors","Please configure product bundle options and fix the validation errors"
-"Please configure product custom options and fix the validation errors","Please configure product custom options and fix the validation errors"
-"Please confirm order you placed when you was offline","Please confirm order you placed when you was offline"
-"Please fix the validation errors","Please fix the validation errors"
-"Please select the field which You like to sort by","Please select the field which You like to sort by"
-"Please wait ...","Please wait ..."
-"Proceed to checkout","Proceed to checkout"
-"Processing order...","Processing order..."
-"Product has been added to the cart!","Product has been added to the cart!"
-"Product price is unknown, product cannot be added to the cart!","Product price is unknown, product cannot be added to the cart!"
-"Product quantity has been updated!","Product quantity has been updated!"
-"Product {productName} has been added to the compare!","Product {productName} has been added to the compare!"
-"Product {productName} has been added to wishlist!","Product {productName} has been added to wishlist!"
-"Product {productName} has been removed from compare!","Product {productName} has been removed from compare!"
-"Product {productName} has been removed from wishlist!","Product {productName} has been removed from wishlist!"
+"Product {productName} has been added to Compare!","Product {productName} has been added to Compare!"
+"Product {productName} has been added to Wishlist!","Product {productName} has been added to Wishlist!"
+"Product {productName} has been removed from Compare!","Product {productName} has been removed from Compare!"
+"Product {productName} has been removed from Wishlist!","Product {productName} has been removed from Wishlist!"
 "Quantity available offline","Quantity (offline mode)"
 "Quantity available","Quantity ({qty} available)"
 "Quantity must be above 0","Quantity must be above 0"
 "Quantity must be below {quantity}","Quantity must be below {quantity}"
 "Quantity must be positive integer","Quantity must be positive integer"
 "Registering the account ...","Registering the account ..."
-"Reset password feature does not work while offline!","Reset password feature does not work while offline!"
+"The reset password feature does not work while offline!","The reset password feature does not work while offline!"
 "Review","Review"
 "Reviews","Reviews"
 "Select 0","Select 0"
 "Select 1","Select 1"
 "Shopping cart is empty. Please add some products before entering Checkout","Shopping cart is empty. Please add some products before entering Checkout"
 "Some of the ordered products are not available!","Some of the ordered products are not available!"
-"Stock check in progress, please wait while available stock quantities are checked","Stock check in progress, please wait while available stock quantities are checked"
+"Please wait while we check for available stock quantities","Please wait while we check for available stock quantities"
 "Subtotal incl. tax","Subtotal incl. tax"
 "Summary","Summary"
-"The product is out of stock and cannot be added to the cart!","The product is out of stock and cannot be added to the cart!"
-"The product, category or CMS page is not available in Offline mode. Redirecting to Home.","The product, category or CMS page is not available in Offline mode. Redirecting to Home."
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation."
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not available because we cannot check it right now.","There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not avaiable because we cannot check it right now."
+"The product is out of stock and cannot be added to Cart!","The product is out of stock and cannot be added to Cart!"
+"The product, category, or CMS page is not available in Offline mode. Redirecting to Home.","The product, category, or CMS page is not available in Offline mode. Redirecting to Home."
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation."
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not avaiable because we cannot check it right now."
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Type what you are looking for..."
