--- a/core/i18n/resource/i18n/es-ES.csv
+++ b/core/i18n/resource/i18n/es-ES.csv
@@ -13,26 +13,26 @@
 "Internal validation error. Please check if all required fields are filled in. Please contact us on {email}","Error de validación interna. Por favor, compruebe si se completan todos los campos obligatorios. Póngase en contacto con nosotros en {email}"
 "My Account","Mi Cuenta"
 "Newsletter preferences have successfully been updated","Las preferencias del boletín se han actualizado con éxito"
-"No products synchronized for this category. Please come back while online!","No hay productos sincronizados para esta categoría. Por favor regrese mientras esta en linea!"
+"No products synced for this category. Please come back while online!","No hay productos sincronizados para esta categoría. Por favor regrese mientras esta en linea!"
 "No such configuration for the product. Please do choose another combination of attributes.","No hay tal configuración para el producto. Por favor, elija otra combinación de atributos."
 "Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
 "Out of stock!","¡Agotado!"
 "Please fix the validation errors","Corrija los errores de validación"
-"Product has been added to the cart!","¡El producto ha sido agregado al carrito!"
-"Product price is unknown, product cannot be added to the cart!","El precio del producto es desconocido, ¡el producto no se puede agregar al carrito!"
-"Product quantity has been updated!","¡La cantidad del producto ha sido actualizada!"
-"Product {productName} has been added to the compare!","¡El producto {productName} se ha agregado a la comparación!"
-"Product {productName} has been added to wishlist!","¡El producto {productName} ha sido agregado a la lista de deseos!"
-"Product {productName} has been removed from compare!","¡El producto {productName} ha sido eliminado de la comparación!"
-"Product {productName} has been removed from wishlist!","¡El producto {productName} ha sido eliminado de la lista de deseos!"
+"The product has been added to Cart!","¡El producto ha sido agregado al carrito!"
+"The product price is unknown and cannot be added to Cart!","El precio del producto es desconocido, ¡el producto no se puede agregar al carrito!"
+"The product quantity has been updated!","¡La cantidad del producto ha sido actualizada!"
+"Product {productName} has been added to Compare!","¡El producto {productName} se ha agregado a la comparación!"
+"Product {productName} has been added to Wishlist!","¡El producto {productName} ha sido agregado a la lista de deseos!"
+"Product {productName} has been removed from Compare!","¡El producto {productName} ha sido eliminado de la comparación!"
+"Product {productName} has been removed from Wishlist!","¡El producto {productName} ha sido eliminado de la lista de deseos!"
 "Registering the account ...","Registrando la cuenta ..."
-"Reset password feature does not work while offline!","¡La función Restablecer contraseña no funciona sin conexión!"
+"The reset password feature does not work while offline!","¡La función Restablecer contraseña no funciona sin conexión!"
 "Shopping cart is empty. Please add some products before entering Checkout","El Carro de Compras está Vacío. Por favor agregue algunos productos antes de ingresar al Checkout"
 "Some of the ordered products are not available!","¡Algunos de los productos pedidos no están disponibles!"
-"Stock check in progress, please wait while available stock quantities are checked","Verificación de stock en curso, espere mientras se verifican las cantidades de stock disponibles"
+"Please wait while we check for available stock quantities","Verificación de stock en curso, espere mientras se verifican las cantidades de stock disponibles"
 "Subtotal incl. tax","Subtotal incl. impuesto"
-"The product is out of stock and cannot be added to the cart!","¡El producto no está disponible y no se puede agregar al carrito!"
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","El sistema no está seguro acerca de la cantidad de stock (volátil). El producto ha sido agregado al carrito para pre-reserva."
+"The product is out of stock and cannot be added to Cart!","¡El producto no está disponible y no se puede agregar al carrito!"
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","El sistema no está seguro acerca de la cantidad de stock (volátil). El producto ha sido agregado al carrito para pre-reserva."
 "There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not avaiable because we cannot check it right now.","No hay conexión a internet. Todavía puedes hacer tu pedido. Le notificaremos si alguno de los productos solicitados no están disponible porque no podemos verificarlo ahora mismo."
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","¡Esta característica aún no está implementada! ¡Por favor, eche un vistazo a https://github.com/DivanteLtd/vue-storefront/issues para nuestra Hoja de ruta!"
 "Thumbnail","Thumbnail"
