--- a/core/i18n/resource/i18n/fr-FR.csv
+++ b/core/i18n/resource/i18n/fr-FR.csv
@@ -17,31 +17,31 @@
 "Must be greater than 0","Doit être supérieur à 0"
 "My Account","Mon compte"
 "Newsletter preferences have successfully been updated","Les préférences de la newsletter ont été mises à jour avec succès"
-"No products synchronized for this category. Please come back while online!","Aucun produit synchronisé dans cette catégorie. Merci de passer en ligne !"
+"No products synced for this category. Please come back while online!","Aucun produit synchronisé dans cette catégorie. Merci de passer en ligne !"
 "No such configuration for the product. Please do choose another combination of attributes.","Aucune configuration de ce type pour le produit. Veuillez choisir une autre combinaison d'attributs."
 "OK","OK"
 "Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
 "Out of stock!","Rupture de stock !"
 "Out of the stock!","Épuisé !"
-"Please configure product custom options and fix the validation errors","Veuillez configurer les options du produit et corriger les erreurs de validation"
+"Please configure custom product options and fix the validation errors","Veuillez configurer les options du produit et corriger les erreurs de validation"
 "Please fix the validation errors","Veuillez corriger les erreurs de validation"
 "Proceed to checkout","Passer la commande"
-"Product has been added to the cart!","Le produit a été ajouté au panier !"
-"Product price is unknown, product cannot be added to the cart!","Le prix du produit est inconnu, le produit ne peut pas être ajouté au panier !"
-"Product quantity has been updated!","La quantité de produit a été mise à jour!"
-"Product {productName} has been added to the compare!","Le produit {productName} a été ajouté au comparateur !"
-"Product {productName} has been added to wishlist!","Le produit {productName} a été ajouté à la liste des souhaits !"
-"Product {productName} has been removed from compare!","Le produit {productName} a été supprimé du comparateur !"
-"Product {productName} has been removed from wishlist!","Le produit {productName} a été supprimé de la liste des souhaits !"
+"The product has been added to Cart!","Le produit a été ajouté au panier !"
+"The product price is unknown and cannot be added to Cart!","Le prix du produit est inconnu, le produit ne peut pas être ajouté au panier !"
+"The product quantity has been updated!","La quantité de produit a été mise à jour!"
+"Product {productName} has been added to Compare!","Le produit {productName} a été ajouté au comparateur !"
+"Product {productName} has been added to Wishlist!","Le produit {productName} a été ajouté à la liste des souhaits !"
+"Product {productName} has been removed from Compare!","Le produit {productName} a été supprimé du comparateur !"
+"Product {productName} has been removed from Wishlist!","Le produit {productName} a été supprimé de la liste des souhaits !"
 "Registering the account ...","Enregistrement du compte..."
-"Reset password feature does not work while offline!","La fonction de réinitialisation du mot de passe ne fonctionne pas en mode hors ligne !"
+"The reset password feature does not work while offline!","La fonction de réinitialisation du mot de passe ne fonctionne pas en mode hors ligne !"
 "Shopping cart is empty. Please add some products before entering Checkout","Le panier d'achat est vide. Veuillez ajouter des produits avant de passer à la caisse"
 "Some of the ordered products are not available!","Certains des produits commandés ne sont pas disponibles !"
-"Stock check in progress, please wait while available stock quantities are checked","Vérification du stock en cours, veuillez patienter pendant que les stocks disponibles sont vérifiés"
+"Please wait while we check for available stock quantities","Vérification du stock en cours, veuillez patienter pendant que les stocks disponibles sont vérifiés"
 "Subtotal incl. tax","Sous-total taxes incluses"
-"The product is out of stock and cannot be added to the cart!","Le produit est en rupture de stock et ne peut être ajouté au panier !"
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","Le système n'est pas sûr de la quantité de stock (volatile). Le produit a été ajouté au panier pour la pré-réservation."
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not available because we cannot check it right now.","Il n'y a pas de connexion Internet. Vous pouvez toujours passer votre commande. Nous vous informerons si l'un des produits commandés n'est pas disponible car nous ne pouvons pas le vérifier en mode hors ligne."
+"The product is out of stock and cannot be added to Cart!","Le produit est en rupture de stock et ne peut être ajouté au panier !"
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","Le système n'est pas sûr de la quantité de stock (volatile). Le produit a été ajouté au panier pour la pré-réservation."
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Il n'y a pas de connexion Internet. Vous pouvez toujours passer votre commande. Nous vous informerons si l'un des produits commandés n'est pas disponible car nous ne pouvons pas le vérifier en mode hors ligne."
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Cette fonctionnalité n'est pas encore implémentée! Veuillez vous rendre sur https://github.com/DivanteLtd/vue-storefront/issues pour consulter notre Roadmap!"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Saisissez votre recherche ..."
