--- a/core/i18n/resource/i18n/it-IT.csv
+++ b/core/i18n/resource/i18n/it-IT.csv
@@ -3,8 +3,8 @@
 "Account data has successfully been updated","Le tue informazioni sono state aggiornate con successo"
 "Add review","Aggiungi una recensione"
 "Adding a review ...","Adding a review ..."
-"Address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled.","L'indirizzo fornito nel checkout contiene dati non validi. Per favore controlla di averi riempito tutti i campi obbligatori e contattaci all'indirizzo email {email} per risolvere questo problema in futuro. Il tuo ordine è stato cancellato."
-"Allow notification about the order","Consenti notifiche sull'ordine"
+"The address provided in checkout contains invalid data. Please check if all required fields are filled in and also contact us on {email} to resolve this issue for future. Your order has been canceled.","L'indirizzo fornito nel checkout contiene dati non validi. Per favore controlla di averi riempito tutti i campi obbligatori e contattaci all'indirizzo email {email} per risolvere questo problema in futuro. Il tuo ordine è stato cancellato."
+"Enable order notification","Consenti notifiche sull'ordine"
 "Are you sure you would like to remove this item from the shopping cart?","Sei sicuro di voler rimuovere questo articolo dal carrello?"
 "Checkout","Cassa"
 "Columns","Colonne"
@@ -26,48 +26,48 @@
 "My Account","Il mio account"
 "Newsletter preferences have successfully been updated","Le tue preferenze sulla newsletter sono state aggiornate con successo"
 "No available product variants","Non ci sono varianti disponibili"
-"No products synchronized for this category. Please come back while online!","Nessun prodotto in questa categoria. Verifica la connessione di rete e riprova!"
+"No products synced for this category. Please come back while online!","Nessun prodotto in questa categoria. Verifica la connessione di rete e riprova!"
 "No such configuration for the product. Please do choose another combination of attributes.","Configurazione del prodotto inesistente. Scegli un'altra combinazione di attributi"
 "OK","OK"
 "Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
-"Or if you will stay on "Order confirmation" page, the order will be placed automatically without confirmation, once the internet connection will be back.","Oppure se rimarrai nella pagina di "Conferma ordine", l'ordine verrà automaticamente evaso senza conferma, una volta che la connessione sarà ripristinata."
+"Or if you will stay on the "Order Confirmation" page, the order will be placed automatically, once the internet connection is back.","Oppure se rimarrai nella pagina di "Conferma ordine", l'ordine verrà automaticamente evaso senza conferma, una volta che la connessione sarà ripristinata."
 "Out of stock!","Non disponibile"
 "Out of the stock!","Non disponibile"
 "Payment Information","Informazioni di pagamento"
 "Please configure product bundle options and fix the validation errors","Per favore completa la configurazione del prodotto bundle e verifica la validazione dei dati"
-"Please configure product custom options and fix the validation errors","Per favore configura le opzioni personabilizzate del prodotto e verifica di aver compilato correttamente tutti i campi"
-"Please confirm order you placed when you was offline","Per favore conferma l'ordine che hai fatto quando eri offline"
+"Please configure custom product options and fix the validation errors","Per favore configura le opzioni personabilizzate del prodotto e verifica di aver compilato correttamente tutti i campi"
+"Please confirm the order you placed when you were offline","Per favore conferma l'ordine che hai fatto quando eri offline"
 "Please fix the validation errors","Verifica di aver compilato correttamente tutti i campi"
 "Please select the field which You like to sort by","Scegli il campo con cui vuoi ordinare"
 "Please wait ...","Attendere..."
 "Proceed to checkout","Vai alla cassa"
 "Processing order...","Ordine in corso..."
-"Product has been added to the cart!","Il prodotto è stato aggiunto al carrello!"
-"Product price is unknown, product cannot be added to the cart!","Il prezzo di questo prodotto è sconosciuto, non è possibile aggiungerlo al carrello!"
-"Product quantity has been updated!","La quantità è stata aggiornata!"
-"Product {productName} has been added to the compare!","Il prodotto {productName} è stato aggiunto al comparatore!"
-"Product {productName} has been added to wishlist!","Il prodotto {productName} è stato aggiunto alla lista dei desideri!"
-"Product {productName} has been removed from compare!","Il prodotto {productName} è stato rimosso dal comparatore"
-"Product {productName} has been removed from wishlist!","Il prodotto {productName} è stato rimosso dalla lista dei desideri"
+"The product has been added to Cart!","Il prodotto è stato aggiunto al carrello!"
+"The product price is unknown and cannot be added to Cart!","Il prezzo di questo prodotto è sconosciuto, non è possibile aggiungerlo al carrello!"
+"The product quantity has been updated!","La quantità è stata aggiornata!"
+"Product {productName} has been added to Compare!","Il prodotto {productName} è stato aggiunto al comparatore!"
+"Product {productName} has been added to Wishlist!","Il prodotto {productName} è stato aggiunto alla lista dei desideri!"
+"Product {productName} has been removed from Compare!","Il prodotto {productName} è stato rimosso dal comparatore"
+"Product {productName} has been removed from Wishlist!","Il prodotto {productName} è stato rimosso dalla lista dei desideri"
 "Quantity available","Quantità ({qty} disponibile)"
 "Quantity must be above 0","La quantità deve essere superiore a 0"
 "Quantity must be below {quantity}","La quantità deve essere inferiore a {quantity}"
 "Quantity must be positive integer","La quantità deve essere un numero positivo"
 "Registering the account ...","Creazione dell'account..."
-"Reset password feature does not work while offline!","Non puoi reimpostare la password quando non sei in linea!"
+"The reset password feature does not work while offline!","Non puoi reimpostare la password quando non sei in linea!"
 "Review","Recensione"
 "Reviews","Recensioni"
 "Select 0","Select 0"
 "Select 1","Select 1"
 "Shopping cart is empty. Please add some products before entering Checkout","Il tuo carrello è vuoto. Aggiungi almeno un prodotto prima di procedere alla cassa"
 "Some of the ordered products are not available!","Alcuni dei prodotti ordinati non sono disponibili!"
-"Stock check in progress, please wait while available stock quantities are checked","Verifica disponibilità in corso, attendere la verifica della quantità dei prodotti"
+"Please wait while we check for available stock quantities","Verifica disponibilità in corso, attendere la verifica della quantità dei prodotti"
 "Subtotal incl. tax","Subtotale tasse incluse"
 "Summary","Riassunto"
-"The product is out of stock and cannot be added to the cart!","Il prodotto non è più disponibile e non può essere aggiunto al carrello"
-"The product, category or CMS page is not available in Offline mode. Redirecting to Home.","The product, category or CMS page is not available in Offline mode. Redirecting to Home."
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","Il sistema non è sicuro della disponibilità del prodotto (volatile). Il prodotto è stato aggiunto al carrello per prenotazione"
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not available because we cannot check it right now.","Non sei connesso ad internet ma puoi ugualmente procedere con l'ordine. Non è possibile verificare adesso la disponibilità dei prodotti, se qualcuno dei prodotti ordinati non sarà più disponibile te lo faremo sapere."
+"The product is out of stock and cannot be added to Cart!","Il prodotto non è più disponibile e non può essere aggiunto al carrello"
+"The product, category, or CMS page is not available in Offline mode. Redirecting to Home.","The product, category, or CMS page is not available in Offline mode. Redirecting to Home."
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","Il sistema non è sicuro della disponibilità del prodotto (volatile). Il prodotto è stato aggiunto al carrello per prenotazione"
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Non sei connesso ad internet ma puoi ugualmente procedere con l'ordine. Non è possibile verificare adesso la disponibilità dei prodotti, se qualcuno dei prodotti ordinati non sarà più disponibile te lo faremo sapere."
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Questa funzionalità non è ancora stata implementata! Dai un'occhiata alla nostra roadmap qui https://github.com/DivanteLtd/vue-storefront/issues!"
 "Thumbnail","Miniatura"
 "Type what you are looking for...","Cerca nel catalogo..."
