--- a/core/i18n/resource/i18n/pl-PL.csv
+++ b/core/i18n/resource/i18n/pl-PL.csv
@@ -17,31 +17,31 @@
 "Must be greater than 0","Musi być większa niż 0"
 "My Account","Moje konto"
 "Newsletter preferences have successfully been updated","Twoje ustawienia subskrypcji zostały zaktualizowane"
-"No products synchronized for this category. Please come back while online!","Brak produktów dla tej kategorii. Spróbuj ponownie po uzyskaniu dostępu do Internetu!"
+"No products synced for this category. Please come back while online!","Brak produktów dla tej kategorii. Spróbuj ponownie po uzyskaniu dostępu do Internetu!"
 "No such configuration for the product. Please do choose another combination of attributes.","Wybrane opcje są niedostępne. Wybierz inne opcje."
 "OK","OK"
 "Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
 "Out of stock!","Produkt niedostępny!"
 "Out of the stock!","Brak w magazynie!"
-"Please configure product custom options and fix the validation errors","Skonfiguruj opcje produktu i popraw będy walidacji"
+"Please configure custom product options and fix the validation errors","Skonfiguruj opcje produktu i popraw będy walidacji"
 "Please fix the validation errors","Popraw błędy walidacji"
 "Proceed to checkout","Przejdź do kasy"
-"Product has been added to the cart!","Produkt został dodany do koszyka!"
-"Product price is unknown, product cannot be added to the cart!","Nie można dodać produktu do koszyka, nie można potwierdzić ceny produktu!"
-"Product quantity has been updated!","Ilość produktu została zaktualizowana!"
-"Product {productName} has been added to the compare!","Produkt {productName} został dodany do porównania!"
-"Product {productName} has been added to wishlist!","Produkt {productName} został dodany do listy życzeń!"
-"Product {productName} has been removed from compare!","Produkt {productName} został usunięty z porównania!"
-"Product {productName} has been removed from wishlist!","Produkt {productName} został usunięty z listy życzeń!"
+"The product has been added to Cart!","Produkt został dodany do koszyka!"
+"The product price is unknown and cannot be added to Cart!","Nie można dodać produktu do koszyka, nie można potwierdzić ceny produktu!"
+"The product quantity has been updated!","Ilość produktu została zaktualizowana!"
+"Product {productName} has been added to Compare!","Produkt {productName} został dodany do porównania!"
+"Product {productName} has been added to Wishlist!","Produkt {productName} został dodany do listy życzeń!"
+"Product {productName} has been removed from Compare!","Produkt {productName} został usunięty z porównania!"
+"Product {productName} has been removed from Wishlist!","Produkt {productName} został usunięty z listy życzeń!"
 "Registering the account ...","Tworzenie konta ..."
-"Reset password feature does not work while offline!","Aby zresetowa hasło musisz posiadać połączenie z Internetem!"
+"The reset password feature does not work while offline!","Aby zresetowa hasło musisz posiadać połączenie z Internetem!"
 "Shopping cart is empty. Please add some products before entering Checkout","Koszyk jest pusty. Dodaj produkty."
 "Some of the ordered products are not available!","Niektóre z produktów są niedostępne!"
-"Stock check in progress, please wait while available stock quantities are checked","Trwa sprawdzanie dostępności produktów, proszę czekać"
+"Please wait while we check for available stock quantities","Trwa sprawdzanie dostępności produktów, proszę czekać"
 "Subtotal incl. tax","Kwota częściowa brutto"
-"The product is out of stock and cannot be added to the cart!","Produkt jest niedostępny!"
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation."
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not available because we cannot check it right now.","Brak połączenia z Internetem. Możesz nadal złożyć zamówienie. Poinformujemy Cię jeśli któryś z produktów nie będzie dostępny."
+"The product is out of stock and cannot be added to Cart!","Produkt jest niedostępny!"
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation."
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Brak połączenia z Internetem. Możesz nadal złożyć zamówienie. Poinformujemy Cię jeśli któryś z produktów nie będzie dostępny."
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Wybrana opcja jest niedostępna!"
 "Thumbnail","Miniaturka"
 "Type what you are looking for...","Znajdź..."
