--- a/core/i18n/resource/i18n/pt-BR.csv
+++ b/core/i18n/resource/i18n/pt-BR.csv
@@ -14,29 +14,29 @@
 "Internal validation error. Please check if all required fields are filled in. Please contact us on {email}","Erro interno de validação. Por favor verifique se todos os campos obrigatórios estão preenchidos. Por favor contate-nos em {email}"
 "My Account","Minha Conta"
 "Newsletter preferences have successfully been updated","Configurações de Newsletter foram atualizadas."
-"No products synchronized for this category. Please come back while online!","Nenhum produto sincronizado para essa categoria. Por favor volte quando estiver online!"
+"No products synced for this category. Please come back while online!","Nenhum produto sincronizado para essa categoria. Por favor volte quando estiver online!"
 "No such configuration for the product. Please do choose another combination of attributes.","Nenhuma configuração desse tipo disponível para o produto. Por favor selecione outra combinação de opções."
 "OK","OK"
 "Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
 "Out of stock!","Sem estoque!"
 "Please fix the validation errors","Por favor corrija os erros de validação"
 "Proceed to checkout","Finalizar Compra"
-"Product has been added to the cart!","Produto foi adicionado ao carrinho!"
-"Product price is unknown, product cannot be added to the cart!","Preço do produto é desconhecido, produto não pode ser adicionado ao carrinho!"
-"Product quantity has been updated!","A quantidade do produto foi atualizada!"
-"Product {productName} has been added to the compare!","Produto {productName} foi adicionado para comparação!"
-"Product {productName} has been added to wishlist!","Produto {productName} foi adicionado à lista de desejos!"
-"Product {productName} has been removed from compare!","Produto {productName} foi removido da comparação!"
-"Product {productName} has been removed from wishlist!","Produto {productName} foi removido da lista de desejos!"
+"The product has been added to Cart!","Produto foi adicionado ao carrinho!"
+"The product price is unknown and cannot be added to Cart!","Preço do produto é desconhecido, produto não pode ser adicionado ao carrinho!"
+"The product quantity has been updated!","A quantidade do produto foi atualizada!"
+"Product {productName} has been added to Compare!","Produto {productName} foi adicionado para comparação!"
+"Product {productName} has been added to Wishlist!","Produto {productName} foi adicionado à lista de desejos!"
+"Product {productName} has been removed from Compare!","Produto {productName} foi removido da comparação!"
+"Product {productName} has been removed from Wishlist!","Produto {productName} foi removido da lista de desejos!"
 "Registering the account ...","Salvando a conta ..."
-"Reset password feature does not work while offline!","Recuperação de Senha não funciona sem conexão de internet!"
+"The reset password feature does not work while offline!","Recuperação de Senha não funciona sem conexão de internet!"
 "Shopping cart is empty. Please add some products before entering Checkout","Carrinho está vazio. Por favor adicione produtos antes de Finalizar a Compra"
 "Some of the ordered products are not available!","Alguns dos produtos comprados não estão disponíveis!"
-"Stock check in progress, please wait while available stock quantities are checked","Estamos verificando o estoque, por favor aguarde até verificarmos a quantidade solicitada."
+"Please wait while we check for available stock quantities","Estamos verificando o estoque, por favor aguarde até verificarmos a quantidade solicitada."
 "Subtotal incl. tax","Subtotal c/ imposto"
-"The product is out of stock and cannot be added to the cart!","Produto não possui estoque e não pode ser adicionado ao carrinho!"
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","O sistema não tem certeza sobre a quantidade em estoque (volátil). O produto foi adicionado ao carrinho em pré-reserva."
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not available because we cannot check it right now.","Sem conexão de Internet. Você ainda pode finalizar seu pedido. Assim que possível o notificaremos se os produtos solicitados não estiverem disponíveis."
+"The product is out of stock and cannot be added to Cart!","Produto não possui estoque e não pode ser adicionado ao carrinho!"
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","O sistema não tem certeza sobre a quantidade em estoque (volátil). O produto foi adicionado ao carrinho em pré-reserva."
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","Sem conexão de Internet. Você ainda pode finalizar seu pedido. Assim que possível o notificaremos se os produtos solicitados não estiverem disponíveis."
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","Essa funcionalidade não foi implementada ainda! Por favor verifique nosso planejamento em https://github.com/DivanteLtd/vue-storefront/issues"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","Digite o que você está buscando..."
