--- a/core/i18n/resource/i18n/zh-cn.csv
+++ b/core/i18n/resource/i18n/zh-cn.csv
@@ -3,7 +3,7 @@
 "Account data has successfully been updated","帐户数据已更新成功"
 "Add review","添加评论"
 "Adding a review ...","Adding a review ..."
-"Allow notification about the order","允许订阅有关订单的通知"
+"Enable order notification","允许订阅有关订单的通知"
 "Are you sure you would like to remove this item from the shopping cart?","您确定要从购物车中删除此商品吗？"
 "Checkout","注销"
 "Compare Products","商品比较"
@@ -22,39 +22,39 @@
 "My Account","我的账户"
 "Newsletter preferences have successfully been updated","时事通讯首选项已成功更新"
 "No available product variants","没有可用的产品"
-"No products synchronized for this category. Please come back while online!","没有为此类别的商品。 请等商品上线后再来看看!"
+"No products synced for this category. Please come back while online!","没有为此类别的商品。 请等商品上线后再来看看!"
 "No such configuration for the product. Please do choose another combination of attributes.","没有这样的商品配置。 请选择其他属性组合."
 "OK","确定"
 "Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
 "Out of stock!","缺库存!"
 "Payment Information","付款信息"
 "Please configure product bundle options and fix the validation errors","请配置商品属性选项并修复验证错误"
-"Please configure product custom options and fix the validation errors","请配置产品自定义选项并修复验证错误"
-"Please confirm order you placed when you was offline","请确认您离线时的订单"
+"Please configure custom product options and fix the validation errors","请配置产品自定义选项并修复验证错误"
+"Please confirm the order you placed when you were offline","请确认您离线时的订单"
 "Please fix the validation errors","请修复验证错误"
 "Please select the field which You like to sort by","请选择您要排序的字段"
 "Proceed to checkout","去结算"
 "Processing order...","订单处理中..."
-"Product has been added to the cart!","已成功将商品加入购物车!"
-"Product price is unknown, product cannot be added to the cart!","商品价格未确定，无法添加到购物车！"
-"Product quantity has been updated!","產品數量已更新！"
-"Product {productName} has been added to the compare!","商品 {productName} 已经添加到比较列表中!"
-"Product {productName} has been added to wishlist!","商品 {productName} 已添加到心愿单!"
-"Product {productName} has been removed from compare!","商品 {productName} 已从比较列表中移除!"
-"Product {productName} has been removed from wishlist!","已从心愿单中移除了商品 {productName} !"
+"The product has been added to Cart!","已成功将商品加入购物车!"
+"The product price is unknown and cannot be added to Cart!","商品价格未确定，无法添加到购物车！"
+"The product quantity has been updated!","產品數量已更新！"
+"Product {productName} has been added to Compare!","商品 {productName} 已经添加到比较列表中!"
+"Product {productName} has been added to Wishlist!","商品 {productName} 已添加到心愿单!"
+"Product {productName} has been removed from Compare!","商品 {productName} 已从比较列表中移除!"
+"Product {productName} has been removed from Wishlist!","已从心愿单中移除了商品 {productName} !"
 "Registering the account ...","注册帐户 ..."
-"Reset password feature does not work while offline!","离线状态时，不能重置密码!"
+"The reset password feature does not work while offline!","离线状态时，不能重置密码!"
 "Review","评论"
 "Reviews","评论列表"
 "Shopping cart is empty. Please add some products before entering Checkout","亲，购物车空空如也~， 快去选择一些你喜欢的商品吧."
 "Some of the ordered products are not available!","部分订购的商品不可用!"
-"Stock check in progress, please wait while available stock quantities are checked","正在确认库存数量，请稍候"
+"Please wait while we check for available stock quantities","正在确认库存数量，请稍候"
 "Subtotal incl. tax","含税小计"
 "Summary","摘要",
-"The product is out of stock and cannot be added to the cart!","该商品缺货，无法添加到购物车!"
-"The product, category or CMS page is not available in Offline mode. Redirecting to Home.","在离线模式下，商品，类别或CMS页面不可用。 请返回主页."
-"The system is not sure about the stock quantity (volatile). Product has been added to the cart for pre-reservation.","系统不确定库存量（不稳定）。 产品已添加到购物车中进行预订."
-"There is no Internet connection. You can still place your order. We will notify you if any of ordered products is not available because we cannot check it right now.","网络连接不上 我们现在无法确认库存。但是您仍然可以下订单， 如果订购的产品有问题，我们会通知您。"
+"The product is out of stock and cannot be added to Cart!","该商品缺货，无法添加到购物车!"
+"The product, category, or CMS page is not available in Offline mode. Redirecting to Home.","在离线模式下，商品，类别或CMS页面不可用。 请返回主页."
+"The system is not sure about the stock quantity (volatile). Product has been added to Cart for pre-reservation.","系统不确定库存量（不稳定）。 产品已添加到购物车中进行预订."
+"We are sorry, there is no Internet connection. You can still place your order. We will notify you when we are back online if any of your ordered products are out of stock.","网络连接不上 我们现在无法确认库存。但是您仍然可以下订单， 如果订购的产品有问题，我们会通知您。"
 "This feature is not implemented yet! Please take a look at https://github.com/DivanteLtd/vue-storefront/issues for our Roadmap!","此功能尚未实现！ 请查看我们的开发路线图https://github.com/DivanteLtd/vue-storefront/issues!"
 "Thumbnail","Thumbnail"
 "Type what you are looking for...","请输入你想要查找的关键词..."
