--- a/src/themes/default/resource/i18n/ar-SY.csv
+++ b/src/themes/default/resource/i18n/ar-SY.csv
@@ -4,7 +4,7 @@
 "Add to cart","أضف إلى السلّة"
 "Add to compare","أضف إلى المقارنة"
 "Add to favorite","أضف إلى المفضلّة"
-"Allow notification about the order","السماح بالتنبيهات عن الطبية"
+"Enable order notification","السماح بالتنبيهات عن الطبية"
 "Author","المؤلف"
 "Authorization in progress ...","جاري عملية الحصول على تفويض ... "
 "Back to login","العودة لتسجيل الدخول"
@@ -140,7 +140,7 @@
 "Place the order","إتمام الطلب"
 "Please change Your search criteria and try again. If still not finding anything relevant", "يرجى المحاولة مرّة ثانية بعد تغيير معايير البحث إن لم تجد أي شيء ذو صلة"
 "Please check if all data are correct","الرجاء التأكّد من صحّة كافة البيانات"
-"Please confirm order you placed when you was offline","الرجاء التأكيد على إتمام الطلبية التي أنشأتها عندما كنت غير متّصل بالإنترنت"
+"Please confirm the order you placed when you were offline","الرجاء التأكيد على إتمام الطلبية التي أنشأتها عندما كنت غير متّصل بالإنترنت"
 "Please provide valid e-mail address.","يرجى إدخال بريد إلكتروني صحيح"
 "Price {variant}","السعر {variant}"
 "Price","السعر"
