--- a/src/themes/default/resource/i18n/cs-CZ.csv
+++ b/src/themes/default/resource/i18n/cs-CZ.csv
@@ -4,7 +4,7 @@
 "Add to cart","Přidat do košíku"
 "Add to compare","Přidat ke srovnání"
 "Add to favorite","Přidat do oblíbených"
-"Allow notification about the order","Povolit oznámení o objednávce"
+"Enable order notification","Povolit oznámení o objednávce"
 "Author","Autor"
 "Authorization in progress ...","Probíhá autorizace ..."
 "Back to login","Zpět k přihlášení"
@@ -143,7 +143,7 @@
 "Place the order","Zadat objednávku"
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Prosíme změňte svá vyhledávací kritéria a zkuste znovu. Pokud stále nenacházíte, co jste hledali, zkuste nějaké z našich bestsellerů!"
 "Please check if all data are correct","Zkontrolujte, zda jsou všechny údaje správné"
-"Please confirm order you placed when you was offline","Prosíme potvrďte objednávku, kterou jste zadali, když jste byli v režimu offline"
+"Please confirm the order you placed when you were offline","Prosíme potvrďte objednávku, kterou jste zadali, když jste byli v režimu offline"
 "Please provide valid e-mail address.","Prosíme uveďte platnou e-mailovou adresu."
 "Price {variant}","Cena {variant}"
 "Price","Cena"
