--- a/src/themes/default/resource/i18n/en-US.csv
+++ b/src/themes/default/resource/i18n/en-US.csv
@@ -6,7 +6,7 @@
 "Add to cart","Add to cart"
 "Add to compare","Add to compare"
 "Add to favorite","Add to favorite"
-"Allow notification about the order","Allow notification about the order"
+"Enable order notification","Enable order notification"
 "Are you sure you would like to remove all the items from the shopping cart?","Are you sure you would like to remove all the items from the shopping cart?"
 "Are you sure you would like to remove all the items from the wishlist?","Are you sure you would like to remove all the items from the wishlist?"
 "Author","Author"
@@ -155,7 +155,7 @@
 "Place the order","Place the order"
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!"
 "Please check if all data are correct","Please check if all data are correct"
-"Please confirm order you placed when you was offline","Please confirm order you placed when you was offline"
+"Please confirm the order you placed when you were offline","Please confirm the order you placed when you were offline"
 "Please provide valid e-mail address.","Please provide valid e-mail address."
 "Price {variant}","Price {variant}"
 "Price","Price"
