--- a/src/themes/default/resource/i18n/fr-FR.csv
+++ b/src/themes/default/resource/i18n/fr-FR.csv
@@ -4,7 +4,7 @@
 "Add to cart","Ajouter au panier"
 "Add to compare","Ajouter au comparateur"
 "Add to favorite","Ajouter aux favoris"
-"Allow notification about the order","Activer les notifications à propos de cette commande"
+"Enable order notification","Activer les notifications à propos de cette commande"
 "Author","Auteur"
 "Authorization in progress ...","Authentification en cours ..."
 "Back to login","Retour au login"
@@ -135,7 +135,7 @@
 "Place the order","Passer la commande"
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Veuillez changer vos critères de recherche et réessayer. Si vous ne trouvez toujours rien d'intéressant, vous pouvez visiter notre page d'accueil et consulter nos meilleures ventes !"
 "Please check if all data are correct","Veuillez vérifier si toutes les données sont correctes"
-"Please confirm order you placed when you was offline","Veuillez confirmer la commande que vous avez passé lorsque vous étiez hors-ligne"
+"Please confirm the order you placed when you were offline","Veuillez confirmer la commande que vous avez passé lorsque vous étiez hors-ligne"
 "Please provide valid e-mail address.","Veuillez saisir une adresse e-mail valide."
 "Price {variant}","Prix {variant}"
 "Price","Prix"
