--- a/src/themes/default/resource/i18n/zh-cn.csv
+++ b/src/themes/default/resource/i18n/zh-cn.csv
@@ -4,7 +4,7 @@
 "Add to cart","加入购物车"
 "Add to compare","商品比较"
 "Add to favorite","收藏"
-"Allow notification about the order","允许有关订单的通知"
+"Enable order notification","允许有关订单的通知"
 "Apply","应用"
 "Author","作者"
 "Authorization in progress ...","正在验证身份 ..."
@@ -138,7 +138,7 @@
 "Place the order","下订单"
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","请更改您的搜索条件，然后重试。 如果仍然没有找到任何相关内容，请访问主页并阅读一些畅销书!"
 "Please check if all data are correct","请检查所有数据是否正确"
-"Please confirm order you placed when you was offline","请确认您离线时的订单"
+"Please confirm the order you placed when you were offline","请确认您离线时的订单"
 "Please provide valid e-mail address.","请提供有效的电子邮件地址."
 "Price {variant}","价格 {variant}"
 "Price","价格"
